# CUFE-COURSE-MOBILE

./: .gitignore  CHANGELOG.md  README.md  gradle.properties  index.html  package-lock.json  package.json
src/: App.vue  main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: client.rs  crypto.rs  lib.rs  main.rs  models.rs  parser.rs  storage.rs
src-tauri/src/commands/: auth.rs  background.rs  config.rs  date.rs  exam.rs  import_export.rs  mod.rs  schedule.rs  update.rs  widget.rs
src-tauri/src/services/: mod.rs  schedule_service.rs
src/components/: CourseCard.vue  CourseGrid.vue  ImportScheduleDialog.vue  PopupMenu.vue  ScheduleEditDialog.vue  TimeTableManager.vue  UserProfileDialog.vue  WeekSelector.vue
src/composables/: useAuth.ts  useConfig.ts  useCourse.ts  useImportExport.ts  useReminder.ts  useSchedule.ts  useTimeTable.ts
src/utils/: color.ts  config.ts  date.ts  week.ts
