[package]
name = "cufe-course-mobile"
version = "2.7.0"
description = "CUFE-COURSE Mobile App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cufe_course_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "cookies", "rustls-tls"] }
md5 = "0.7"
digest = "0.10"
base64 = "0.21"
des = "0.8"
chrono = "0.4"
dirs = "5"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
thiserror = "1.0"
scraper = "0.25.0"
regex = "1.12.2"
url = "2.5.8"
uuid = { version = "1.0", features = ["v4"] }
jni = "0.21"
ndk-context = "0.1"
